<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Popcorn - Movies List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="settings_remove_all_movies">Remove all movie</string>
    <string name="all_removed">All movies removed from your list</string>
    <string name="settings_back_home">Back to Popcorn list</string>
    <string name="movie_title">Movie Title</string>
    <string name="title_activity_choose">Find movie or create a new one</string>
    <string name="btn_choose_create">Create movie</string>
    <string name="btn_choose_find">Find movie</string>
    <string name="title_activity_add_movie">Movie</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="poster_url">Link to poster</string>
    <string name="show">Show</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="year">Year</string>
    <string name="watched">watched</string>  
    <string name="editMovie">Edit movie</string>
    <string name="deleteMovie">Delete movie</string>
    <string name="title_activity_search_list">Find Movie</string>
    <string name="search">Search</string>
    <string name="go">Go</string>
    <string name="initial_search_title">Coming movies:</string>
    <string name="user_search_title">Found movies:</string>
    <string name="search_result_title">Coming movies</string>
   	<string name="newMovie">Add movie</string>
    <string name="update_movie">Update movie</string>
    
</resources>
