<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_cool"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

<ScrollView 
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    
	
	    
	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingRight="10dp"
	        android:paddingLeft="0dp">
	          
	        <TextView
	        android:id="@+id/textView1Title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title" />
			
			<EditText
	        android:id="@+id/editText1Title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text"/>
			
	        <TextView
	            android:id="@+id/textView1Year"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/year" />
	        
	        <EditText
	            android:id="@+id/editText1year"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:inputType="number" />

	    <TextView
	        android:id="@+id/textView2Desc"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/description" />
	
	    <EditText
	        android:id="@+id/editText2Desc"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textMultiLine" />
	
	        <CheckBox
	        android:id="@+id/checkBox1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/watched"
	         />
	                    
	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	        
	    <TextView
	        android:id="@+id/textView3PosterLink"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/poster_url" />
	    
	    <EditText
	        android:id="@+id/editText3PosterLink"
	                android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:ems="10" />
	    
	    <Button
	        android:id="@+id/buttonPosterLink"
	        
	        android:textColor="#0e2038"
			android:textSize="18sp"
			android:layout_marginRight="15dp"
			android:layout_marginBottom="5dp"
			android:layout_width="120dp"
			android:layout_height="40dp"
			android:background="@drawable/button_shape"
	       
	        android:text="@string/show" />
	
	</LinearLayout>
	    
	<ImageView
	        android:id="@+id/imageViewAddMoviePoster"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:src="@drawable/no_image" />
	
	 <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:orientation="horizontal">
	
	    <Button
	        android:id="@+id/button2Cancel"
	        android:textColor="#0e2038"
			android:textSize="18sp"
			android:layout_marginRight="15dp"
			android:layout_marginBottom="5dp"
			android:layout_width="120dp"
			android:layout_height="40dp"
			android:background="@drawable/button_shape"
	        android:text="@string/cancel" />
	    
	    <Button
	        android:id="@+id/buttonAddMovieOk"        
		    android:textColor="#0e2038"
			android:textSize="18sp"
			android:layout_marginRight="15dp"
			android:layout_marginBottom="5dp"
			android:layout_width="120dp"
			android:layout_height="40dp"
			android:background="@drawable/button_shape"
	        android:text="@string/newMovie" />   
	         
	</LinearLayout>
	</LinearLayout>

</ScrollView>
</LinearLayout>
