<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@color/blue_gray"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageViewItemMoviePoster"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/no_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textViewItemMovieTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue_navy" />

        <TextView
            android:id="@+id/textViewItemMovieYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <TextView
            android:id="@+id/textViewisWatchedItem"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/watched"
            android:textColor="#ec3611"
            
             />

    </LinearLayout>



</LinearLayout>